# tipping-backend

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: down.sql  up.sql
src/: main.rs
src/config/: env.rs
src/db/: connection.rs
src/models/: creator.rs  creators.rs  mod.rs
src/routes/: creators.rs  mod.rs  routes.rs  tips.rs  wallet.rs  webhooks.rs
src/services/: email.rs  mod.rs
src/utils/: response.rs
