[package]
name = "tipfinity"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "3.0.7"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.7"
tokio = { version = "1", features = ["full"] }
axum = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
dotenv = "0.15"
hyper = "1.7.0"
tower-http = { version = "0.6.4", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
